fix spacing for about quote

--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,7 @@ nav span {
 
 #about-quote {
 	margin: 0 auto;
+	padding-top: 10%;
 	max-width: 60%;
 	font-size: 2.5em;
 }
